modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/disallowed-tags/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-disallowed-tags
tests:
  - name: operation-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-example-allowed.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-example-disallowed.yaml
        assertions:
          - violations: "yes"
